--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@
             </div>
         </div>
     </section>
-
-
-
 </main>
 
 
@@ -141,7 +138,74 @@
 
 
 <footer>
+    <div class="footer-top">
 
+        <div class="column-1">
+            <h3>Il tuo posto per parlare</h3>
+            <p>
+                <img src="img/ita.png" class="flag" alt="">
+                Italiano
+            </p>
+            <i class="fa-brands fa-twitter" id="color-white"></i>
+            <i class="fa-brands fa-facebook" id="color-white"></i>
+            <i class="fa-brands fa-instagram" id="color-white"></i>
+            <i class="fa-brands fa-youtube" id="color-white"></i>
+        </div>
+        <div class="column-2">
+            <ul class="colonna-footer">
+                <li id="brg-color">Prodotto</li>
+                <li>Scarica</li>
+                <li>Perché discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+        </div>
+        <div class="column-2">
+            <ul class="colonna-footer">
+                <li id="brg-color">Prodotto</li>
+                <li>Scarica</li>
+                <li>Perché discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+        </div>
+        <div class="column-2">
+            <ul class="colonna-footer">
+                <li id="brg-color">Prodotto</li>
+                <li>Scarica</li>
+                <li>Perché discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+        </div>
+        <div class="column-2">
+            <ul class="colonna-footer">
+                <li id="brg-color">Prodotto</li>
+                <li>Scarica</li>
+                <li>Perché discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="footer-bottom">
+        <div class="barra-footer">
+            <div class="logo2">
+                <img src="img/logo.svg" alt="">
+            </div>
+            <div class="bottone2">
+                <a href="#" class="button-footer">Registrati</a>
+            </div>
+
+        </div>
+    </div>
 </footer>
 
 
